NEWS -- an overview of user-visible changes with each release

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.11                        (2024-06-11)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.10.2                      (2024-06-03)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.10.1                      (2024-05-28)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.10                        (2024-05-22)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.9.9                       (2024-05-21)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.9.8                       (2024-05-09)
----------------------------------------------------------------------
 * 5 x 8inch size was added to the folloing models
   - EM-C7100BAM
   - EM-C7100 Series
   - EM-C8100BAM
   - EM-8100 Series
   - EM-C8101BAM
   - EM-C8101 Series
   - EP-C7000BAM
   - EP-C7000 Series

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.9.7                       (2024-04-16)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------