@@ -1,4 +1,4 @@
-List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.11:
+List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.12:
 
 Epson EC-4020 Series
 Epson EC-4030 Series
