@@ -1,8 +1,8 @@
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.i486.rpm 3696192 BLAKE2B 47600186c0d2c4291c5c729be5e9020efb527f765bccbbfa5b4b2e7ca972faf1a79e4c4fdbc9e6b1200e8d4945a187a28f70a9eb927d0b1a769015462124a634 SHA512 464a8de063e092092f464478c3167b8f18792e2a0cda22e970fbbd910eb4417d880c84730cfcc8ec1b4c24f214bd26fcaa13d296258394083a43d497fa753138
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.x86_64.rpm 3695594 BLAKE2B ef23b41c05104d488c2d67bf5a95523b496d548be91b826cf7a709bd370ae6c8156421fe89480fead743a99576c0c3aa70a129dccfa5173934adacb05dd5d7bb SHA512 2f0664e798166fd09e3da12328e02e8e9e51cac3ea3e941e293803dfa7e80e3b4523369373d8e0b917082c545374a6d1fbe88ae45ad7f18a94abc2a78a331218
-DIST epson-inkjet-printer-escpr2-1.2.10-1.x86_64.rpm 3970236 BLAKE2B f2861fd03c6b92b98c91c833b983b7e8541e36ce7c188af496075e94bf7f6b680c440e5ca1e5fafcde3021fc7301f1a1f020540706b1dc7a91f64300dbcd349a SHA512 183cab580d0745479c6a1b5a2a48b9d4bf48ce15bf979318a6f24ef91693c094b85c480f32198fec0d7b3a0ae2758fd2b985e1c12f908d1f46a098698d96c8a4
 DIST epson-inkjet-printer-escpr2-1.2.11-1.x86_64.rpm 4004424 BLAKE2B 5ca18f440487615a2a45391d0fcdbd1f050b5c07fd6188649b24a486de3025a6c765257649554c98ca64680adbad8ae2bdd82533777a4ce86da67f11d5fa4b22 SHA512 311e123d9beb81bf053151deaf561206da347056007cdc8e19dde365f01e3661607e2259c2cf718b20a8d532e467482b68e182a667abab023f371644909af95f
+DIST epson-inkjet-printer-escpr2-1.2.12-1.x86_64.rpm 4018335 BLAKE2B ead7d1beb97171fcbab363361ab8eed1460b64efc7c6de3470734784ce961016408aeb28622646f38811b3862080612a872117a0a63b1eefda90701cf40be935 SHA512 92fc9be786bcd62bf8a9cc7cdd508ab73aad1b9caba055b3514ff5ee3978e17641f4d5e7c0cdb637c0592fdc5217729002dceb6f3ed8436455541f4fdf7e0fdd
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.62.ebuild 1843 BLAKE2B bbe1b11046a92a16e9d0e76298620cb1b288d60569a89f705f37bd20b502dc9d54661e021bfae25075397f06db7c73f2245e7860d72533b1b96d43615a05e13e SHA512 3a0c9d2fabee1b1d0d87f7a794732539dd3c5685e16a9e32ea101c65f84016029e59e4dd7005c57d1bf3dc7195527bd99b3e0c8ce2ae13047659f7ba25a2b53c
-EBUILD epson-inkjet-printer-escpr2-bin-1.2.10.ebuild 1415 BLAKE2B 0e048210b86058bcbd3095f0e8c39e403d5e8c831b0abc87209038ae2538603655e09a516a334ac43b367f3f0d35e64473e47c7b240bf9ab9ca8664e1121180c SHA512 c535945adf1b539c3d11d81abe3c37e404e5affa2a4d688895ac7900f1d13bcbd26502dee69891433427b6fb9d08133d198aa4c1592c2113c6d6e45b45b884f8
 EBUILD epson-inkjet-printer-escpr2-bin-1.2.11.ebuild 1415 BLAKE2B fded3a8c5edeebf19e671443a5ef167d7048d72b88cd4e4fb35759ba1c7d48b3ad9eeb41b937f10c68898cc46b88e2ed7c1af728f9bd42eb9493ab64466375be SHA512 211b74ec561629adf0c18e0d5bc2e37bcd5dd15b82eeae57ef89aa0593cc9e5b96918c0b9bf37d745fdf1553fa6b6a46c7846672ee572467f10d9ea73b57413a
+EBUILD epson-inkjet-printer-escpr2-bin-1.2.12.ebuild 1415 BLAKE2B 458dc399da3d9b8b4416d7dc7c32c6d479024c734f8d71382d3cd88b1703900c28c0c2c51d9ca26f3453a098829a55cfc1300cd6f9b6a35b3ee464a169c2bbb3 SHA512 a35fbacd832ccb5fe320e22d9a418ecb30c8671e328490105e001d701e41efadbe8d79d05c75b4515526133f188b1d596031f330cf6a9149ba625f67bf6a203d
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
