@@ -5,7 +5,7 @@ EAPI=7
 
 inherit rpm
 
-DSC_F="dsc/f/03/00/15/87/51/5d3c4697185d313915078c9946062c6ed3b9758f"
+DSC_F="dsc/f/03/00/15/98/69/53f6cbd6eaa44eb325bc8f13ae6b22d358f5e49f"
 MY_PN="epson-inkjet-printer-escpr2"
 MY_PV="${PV}-1"
 
