@@ -1,9 +1,9 @@
 AUX gcc-no-implicit-function-declaration-1.1.15.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
 AUX gcc-no-implicit-function-declaration-1.2.10.patch 2421 BLAKE2B 158c074ec7d37ee1a09b29bbee21c29da0ff2784fe25b22f64d2b199b07a8d8c90ca92477f7c284ded194c1a66bee219943b7c827bf7fb1b58227b3e7caedc3b SHA512 55533abc7b4f4cfa6c95868726721e59d187601722c0b2daa38d913f15ce9c695ae4c900274c46a770cfcdf85c46f77c724b936686a70bae34be5660c41a34aa
 DIST epson-inkjet-printer-escpr2-1.1.62.tar.gz 5101117 BLAKE2B 8bea8fa19ba56d008b1dce174367473287c386bcffbc2df2397f4d9aa396ca9ba447b2719d132e7dd7d800e51b685f6397bb30ed2eac1da813fe456fffa5723a SHA512 648006b9f7b14a5fd7ed31516d420c463383b99a8bbc693a2378128d4e4729290ba2deabfeb8526009c223f8e84d5565b4aba80b5478c6c4865ba9e84948b9b0
-DIST epson-inkjet-printer-escpr2-1.2.10-1.tar.gz 5390488 BLAKE2B 31d4d821c2f0f0fd522dddc72ed3f211b4f176c27e40348db578698b2d1d1b0d3e60d38b6c709e7480fba82ecca6aed6cea6742b15d4f2894db6daf0c182fa1f SHA512 61e2c29a839170d1f087a2309b7c0defdc368bd655344873f57e95f7e15715784ee463f5a3303a1e073eafd0b177058f41cc04bf50198db6fa7759c174af0e97
 DIST epson-inkjet-printer-escpr2-1.2.11-1.tar.gz 5447599 BLAKE2B afb9c20361063163c4ccfb5bf3ea6784a8b804391773d6ea39edfd49fff41bbccbd276ea7ced848d36931f5d797a6c224d529cb0c2075d76bede0026c580b8c9 SHA512 180d442598172f987cf273a7545ec9553e559f8d414aa24e54e44e761efd9707e8087edc9f5d9f331dd5afffb12fb742d5408e3c73babca52368754d9f853e54
-EBUILD epson-inkjet-printer-escpr2-1.1.62.ebuild 1379 BLAKE2B 6de13565db46f3edacf0c3d5c8c2487bd2f40aebe4029b35c65b7555892d629e038fae6b74e344d0a50119f13766347d0bcc62af46c8721272cdd1048dfd406d SHA512 5c7d9ec2e63e5f844762468d1554a6867d5d24e0b447b7dfa004fca9c6149fbb5e66a5f21615305bd622dfd57bd2a3d8bdc85a427233d1bad17d1da1063592eb
-EBUILD epson-inkjet-printer-escpr2-1.2.10.ebuild 1833 BLAKE2B 75148b635155b0dd7d7f07f8612ae2e06c0b906b39cc2b975e3ad55be766bb58f72b9efcca203ff6f9719a27763989dcc1c47743dba32c344c8a328b179e654f SHA512 a44cba1dd2cee0d2e67a11a2b1382f11654ced1295c55d01bd57626f0fd5c470214da74af117cd2103d4888ad4b30d5d81bd1f5ebd844aa7164424b91d75676b
+DIST epson-inkjet-printer-escpr2-1.2.12-1.tar.gz 5458382 BLAKE2B fcf48b27b6ca1e80fb45e0ec873ede17e1b8a9d9f23b151c85f1cc02b50ad1aff2f9031ad94bec871c30d5fe3529710d9d9c824bda7537da0a96258efe9edffd SHA512 5c2c4ed3e6641a1adc3a94988c7734f7e8ca0591383588cacd868080d08b5149417ce485b0c62b8de4ff6bb3e101dd5924d404667b1fe8364f21342d657b447b
+EBUILD epson-inkjet-printer-escpr2-1.1.62.ebuild 1526 BLAKE2B a7d8e558a18c211faf4c971074e88daf7c25b6b0c4ec0a9e5a4ef3657527fd3fa11c21a8aa7db42f419eeb1d45780635433d3e9efc8bd8dbc4b50420bc199443 SHA512 ce66e10bbff3de69007c0edf784c88578f2fcec6b9b81b745eb59541fba73dd43749abd35f58e3e4e13bd7d0a5f2196705a7438123d30af39d66cf1daa48ed64
 EBUILD epson-inkjet-printer-escpr2-1.2.11.ebuild 1833 BLAKE2B 5e2216834e875b082b5becb2160accb935822b153779787b0cad4e04aa58e301157500f270391075f05cfb649a1e55e0b5c3b4725251f19531a3eb58a28e42f5 SHA512 95b92813b502209f24fde61485888b8d99c732b3a394017e000e5c6b1389cfbc3af92758af9e73e3475efc6ae89bffaba2631084b9d05a922e2b7ca9303727f9
+EBUILD epson-inkjet-printer-escpr2-1.2.12.ebuild 1833 BLAKE2B 84842f14e86f1877d6bee0262de2f12955b6cff8d8d1468e4bb376c7c000760153a4b11b92ddf54f0336d79d4c32489b6c966cc75d9ab1877b86d468941d139f SHA512 f9cd1068caf5db24b2619901d74b0e062d4c58840c7accc135db78c919f3ce43ae0ec99d712aa8749bf20903d707c94d8c026638302feca8b9ce771c7d074dad
 MISC metadata.xml 775 BLAKE2B 4877278409048049f2b34c2f8603b0845bfbabdb5823b4ae6ab9559cfa64690a059e8d8b2d78990d443464e3604a7c50a1ea210f324cdd4beb7c103e25250f7c SHA512 76daff7f5cab31c3372e9e764497870ee78f1a22ff44225b943fe7f0e7545b56ad7a0cf4544213089d855e6f478facbfc40d43dfdc78abfa11315e6a03d83ac1
